# VRC-GC-French-Matchmaking

./: .env.example  .gitignore  .pre-commit-config.yaml  FONCTIONNALITES.txt  LICENSE  README.md  bot.py  conftest.py  ecosystem.config.js  leaderboard_img.py  preview_leaderboard.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  seed_users.py  test_bot_prefix.py  test_bot_slash.py  test_elo_calc.py  test_elo_updater.py  test_match_cog.py  test_match_service.py  test_pagination.py  test_peak_calculator.py  test_queue_v2.py  test_repository_helpers.py  test_riot_api.py  test_riot_id.py  test_riot_link.py  test_team_balancer.py  test_vote.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
cogs/: admin.py  applications.py  elo_admin.py  match.py  moderation.py  prefix_legacy.py  queue_v2.py  riot_link.py
scripts/: migrate_shared_collections.py
services/: captain_draft.py  elo_calc.py  elo_mapping.py  elo_updater.py  leaderboard_refresh.py  match_service.py  match_verifier.py  peak_calculator.py  repository.py  riot_api.py  riot_id.py  team_balancer.py
tests/: conftest.py  test_applications.py  test_bot_prefix.py  test_bot_slash.py  test_captain_draft.py  test_captain_draft_session.py  test_elo_updater.py  test_match_cog.py  test_match_service.py  test_match_verifier.py  test_migrate_shared_collections.py  test_pagination.py  test_queue_v2.py  test_riot_api.py  test_riot_link.py  test_shared_collections.py  test_team_balancer.py  test_vote.py
